fixed the problem that footer text was overflowing with white background on mobile

--- a/search/assets/css/main.css
+++ b/search/assets/css/main.css
@@ -71,13 +71,15 @@ button {
 
   footer {
     height: 60px;
-    line-height:60px;
     text-align:center;
     background-color: var(--secondaryColor);
     color: var(--textColor);
     position: absolute;
     bottom: 0;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   footer > div {
